# TransferApp

./: AGENTS.md  LICENSE  README.md  deployment.md  setup.md
backend/: Cargo.toml
backend/src/: main.rs
docs/: architecture.md
frontend/: index.html
workers/auth/: wrangler.toml
workers/auth/migrations/: 0001_init.sql
workers/auth/src/: index.js
