[package]
name = "transferapp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["clock"] }
